GP-Copilot/05-package/outputs/templates/app-credentials-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-credentials-netpol
  namespace: my-namespace
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: app-credentials
      app.kubernetes.io/name: app-credentials
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports: &id001
    - protocol: TCP
      port: 8080
  egress:
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - ports: *id001
